<resources>
    <string name="api_key">AIzaSyCeDKFjZyDCVHwJFMch7JT8McHJ69NSfpo</string>
    <string name="titretypevehicule">Type Vehicule</string>
    <string name="titremotorisation">Motorisation</string>
    <string name="titrecritair">Niveau crit air</string>
    <string name="titrenatureetablissement">Nature Etablissement</string>
    <string name="titreGabarit">Gabarit</string>
    <string name="app_name">ENTPE</string>
    <string name="questionnaire">QUESTIONNAIRE</string>
    <string name="stationnement">Stationnement :</string>
    <string name="operation">Opérations effectuées :</string>
    <string name="nature">Nature du client / lieu :</string>
    <string name="natureliste">Nature du client :</string>
    <string name="lieuarrets">Lieu de dépose et/ou d’enlèvement :</string>
    <string name="manutention">Manutention :</string>
    <string name="conditionementarretes">Nature du / des conditionnement(s) :</string>
    <string name="adresseClient">Adresse du client :</string>
    <string name="exempleAdresse">ex : 75 Rue du Pont</string>
    <string name="actionspossible">Quel type d’arrêts avez-vous fait?</string>
    <string name="nbunites">Nombre d’unités</string>
    <string name="exempleInt">0 ou 1 ou 47</string>
    <string name="exempleMerh">Viande, Prospectus etc</string>
    <string name="natureMerch">Nature de la / des marchandise(s) (en clair) :</string>
    <string name="poidsMerch">Poids total (en kg) :</string>
    <string name="exempledeca">ex : 10,7</string>
    <string name="volumeMerch">Volume total (en m3) :</string>
    <string name="exemplecomm">ex : Pour le prochaine trajet prevoir plus de temps</string>
    <string name="comm">Commentaires et observations</string>
    <string name="eempleCodeVille">ex : 73000 ou Chambéry</string>
    <string name="fin_de_tournee">FIN DE TOURNÉE</string>
    <string name="lieu_d_arriv_e_du_v_hicule">Lieu d’arrivée du véhicule :</string>
    <string name="pays_ou_code_postal">Pays ou code postal *</string>
    <string name="exempleNomVille">Bassens</string>
    <string name="stationnementchoix1">Dans l’enceinte de l’établissement</string>
    <string name="stationnementchoix2">Autorisé (hors aire de livraison)</string>
    <string name="stationnementchoix3">Stationnement payant</string>
    <string name="stationnementchoix4">Stationnement interdit</string>
    <string name="stationnementchoix5">Aire de livraison</string>
    <string name="stationnementchoix6">Trottoir</string>
    <string name="stationnementchoix7">Couloir ou arrêt de bus</string>
    <string name="stationnementchoix8">Double-file</string>
    <string name="Autres">Autres</string>
    <string name="Précisez">Précisez</string>
    <string name="volume">Volume(m3) :</string>
    <string name="exemplePaysCodepostal">France ou 73000</string>
    <string name="exempleCommune">Chambéry</string>
    <string name="exempleNom">Adrien</string>
    <string name="exempleNomEtablissement">Info And Food</string>
    <string name="exempleImmatriculation">CD574HN</string>
    <string name="exempleMarque">Mitsubishi</string>
    <string name="exempleModele">Fuso</string>
    <string name="exempleCodepostal">73000</string>
    <string name="exempleSiret">828233932</string>
    <string name="natureChoix1">Transporteur</string>
    <string name="natureChoix2">Plate-forme logistique</string>
    <string name="natureChoix3">Plate-forme distribution</string>
    <string name="natureChoix4">Unité de production</string>
    <string name="natureChoix5">Grossiste</string>
    <string name="natureChoix6">Grand magasin</string>
    <string name="natureChoix7">Petit commerce</string>
    <string name="natureChoix8">Bureau</string>
    <string name="natureChoix9">Artisan</string>
    <string name="natureChoix10">Particulier</string>
    <string name="natureChoix11">Chantier</string>
    <string name="lieuChoix1">Surface de vente de ou de production</string>
    <string name="lieuChoix2">Lieu de stockage spécifique (hall, couloir)</string>
    <string name="lieuChoix3">Lieu de stockage transitoire</string>
    <string name="lieuChoix4">Au rez-de-chaussée</string>
    <string name="lieuChoix5">En étage ou en cave</string>
    <string name="lieuChoix6">Autre, précisez</string>
    <string name="lieuChoix7">Sur le trottoir</string>
    <string name="lieuChoix8">En double-file</string>
    <string name="lieuChoix9">Parking privé ou réservé</string>
    <string name="lieuChoix10">Dans la cour</string>
    <string name="lieuChoix11">Sur un quai</string>
    <string name="manutentionchoix1">Aucun</string>
    <string name="manutentionchoix2">Diable, chariot</string>
    <string name="manutentionchoix3">Roll</string>
    <string name="manutentionchoix4">Chariot élévateur</string>
    <string name="manutentionchoix5">Transpalette</string>
    <string name="manutentionchoix6">Hayon</string>
    <string name="manutentionchoix7">Grue</string>
    <string name="conditionementChoix1">Enveloppes</string>
    <string name="conditionementChoix2">Cartons</string>
    <string name="conditionementChoix3">Caisses, bacs</string>
    <string name="conditionementChoix4">Palettes</string>
    <string name="conditionementChoix5">Rouleaux</string>
    <string name="conditionementChoix6">Fûts, Bonbonnes</string>
    <string name="conditionementChoix7">Cintres</string>
    <string name="conditionementChoix8">Vrac</string>
    <string name="conditionementChoix9">Big-bag</string>
    <string name="conditionementChoix10">Caisses mobiles, Conteneurs</string>
    <string name="operationChoix1">Contrôle des colis</string>
    <string name="operationChoix2">Contrôle de la marchandise</string>
    <string name="operationChoix3">Reprise emballages</string>
    <string name="operationChoix4">Encaissement ou paiement</string>
    <string name="operationChoix5">Installation ou montage</string>
    <string name="operationChoix6">Preuve de livraison manuscrite</string>
    <string name="operationChoix7">Preuve de livraison électronique</string>
    <string name="actionChoix1">Dépose</string>
    <string name="actionChoix2">Enlèvement</string>
    <string name="actionChoix3">Conjoint</string>
    <string name="actionChoix4">Vide</string>
    <string name="arretNumero">Arrêt numéro :</string>
    <string name="numero_du_client">Numéro du client :</string>
    <string name="num_exemple">1</string>
    <string name="client_suivant">Client suivant</string>
    <string name="arret_suivant">Fin arrêt</string>
    <string name="fin_de_tournee_button">Fin de tournée</string>
    <string name="dialog_negative_button">Annuler</string>
    <string name="dialog_positive_button">Confirmer</string>
    <string name="Arrete">Nouvelle Arrêt</string>
    <string name="afficheMap">Afficher la Carte</string>
    <string name="enCours">Collecte données en Cours…</string>
    <string name="natureMerchChoix1">1-animaux vivants</string>
    <string name="natureMerchChoix2">2-produits congelés</string>
    <string name="natureMerchChoix3">3-produits frais (légumes, fruits, viandes, poissons, charcuteries, produits)</string>
    <string name="natureMerchChoix4">4-produits alimentaires semi-périssables (céréales, sucre, boissons, café)</string>
    <string name="natureMerchChoix5">5-produits agricoles non alimentaires (matières textiles, déchets, bois)</string>
    <string name="natureMerchChoix6">6-minéraux</string>
    <string name="natureMerchChoix7">7-produits pétroliers</string>
    <string name="natureMerchChoix8">8-produits chimiques non dangereux</string>
    <string name="natureMerchChoix9">9-produits chimiques dangereux</string>
    <string name="natureMerchChoix10">10-pâte à papier et cellulose</string>
    <string name="natureMerchChoix11">11-produits manufacturés non fragiles</string>
    <string name="natureMerchChoix12">12-produits manufacturés fragiles (verre…)</string>
    <string name="natureMerchChoix13">13-emballages, déchets</string>
    <string name="natureMerchChoix14">14-consignes (bouteilles, bonbonnes…)</string>
    <string name="recherche">Recherche</string>
    <string name="choixVehicule">Choix du véhicule</string>
    <string name="listeArrets">Listes des Arrets éffectué</string>
    <string name="Envoye">Envoi questionnaire</string>
    <string name="heure_depart">Heure depart :</string>
    <string name="heure_arrive">Heure arrivé :</string>
    <string name="exemplenature">Artisanat</string>
    <string name="exepmle_heure">10h22</string>
    <string name="ModifierArret">Modifier Arret</string>
    <string name="textvide" />
    <string name="validation">Êtes vous sûrs?</string>
    <string name="advise">Si vous passez à la page suivante vous ne pourrez plus revenir à cette page</string>
    <string name="prendrephoto">Prendre une photo du vehicule :</string>
    <string name="imagedesc">description</string>
    <string name="textSwitch">Saisie Textuelle / Photo</string>
    <string name="prendrephotoMerch">Prendre une photo de la Merchandise :</string>
    <string name="image_vehicule">image vehicule</string>
    <string name="lancer_tourn_e">Lancer tournée</string>
    <string name="gestion_de_flotte">Gestion de flotte</string>
    <string name="etablissements_enregistr_s">Etablissements enregistrés</string>
    <string name="ajouter_un_tablissement">Ajouter un établissement</string>
    <string name="nom_entreprise">NOM ENTREPRISE</string>
    <string name="_48_rue_de_la_boustifaille_78070_cedex">48 rue de la Boustifaille 78070 CEDEX</string>
    <string name="ajouter_un_v_hicule">Ajouter un véhicule</string>
    <string name="siret">Siret:</string>
    <string name="nomdeuxpoint">Nom :</string>
    <string name="adressedeuxpoint">Adresse:</string>
    <string name="villedeuxpoint">Ville :</string>
    <string name="code_postaldeuxpoint">Code Postal :</string>
    <string name="nature_de_l_tablissementdeuxpoint">Nature de l\'établissement :</string>
    <string name="etablissements_scolaires_ou_d_h_bergement">Etablissements scolaires ou d\'hébergement</string>
    <string name="voir_flotte">Voir flotte</string>
    <string name="modifier">Modifier</string>
    <string name="etablissement">ETABLISSEMENT</string>
    <string name="siret_minimum_de_9_digit">Siret (minimum de 9 digit) : *</string>
    <string name="nometoile">Nom : *</string>
    <string name="nature_marchandise">Nature marchandise :</string>
    <string name="nature_de_l_tablissementet">Nature de l\'établissement : *</string>
    <string name="exploitation_agricole">Exploitation agricole</string>
    <string name="artisanat_interventions_d_installation_et_r_parations_diverses">Artisanat (interventions d’installation et réparations diverses)</string>
    <string name="services_services_la_personne_ou_aux_entreprises">Services (services à la personne ou aux entreprises)</string>
    <string name="industrie_ou_atelier">Industrie ou atelier</string>
    <string name="commerce_de_gros">Commerce de gros</string>
    <string name="commerce_de_d_tail_petit_magasin_ou_h_tellerie_restauration">Commerce de détail (petit magasin ou hôtellerie-restauration)</string>
    <string name="grande_distribution">Grande distribution</string>
    <string name="activit_s_de_bureau">Activités de bureau</string>
    <string name="etablissements_scolaires_ou_d_h_bergement3">Etablissements scolaires ou d\'hébergement</string>
    <string name="transporteur_ou_plateforme_logistique">Transporteur ou plateforme logistique</string>
    <string name="autre">Autre</string>
    <string name="typeet">Type : *</string>
    <string name="_2_savoyarde">2-Savoyarde</string>
    <string name="_3_tautliner">3-Tautliner</string>
    <string name="_4_fourgon">4-Fourgon</string>
    <string name="_5_plateau">5-Plateau</string>
    <string name="_6_citerne">6-Citerne</string>
    <string name="_7_frigo">7-Frigo</string>
    <string name="_8_benne">8-Benne</string>
    <string name="annuler">Annuler</string>
    <string name="confirmer">Confirmer</string>
</resources>