<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titre_gestion_vehicule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titretypevehicule"
        android:textSize="@dimen/grand"
        android:textColor="@color/couleur1"
        />
    <LinearLayout
        android:id="@+id/layoutType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewCat"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/typeet"

            android:textColor="@color/champTitre"
            android:textSize="@dimen/petit" />

        <RadioGroup
            android:id="@+id/groupeCategorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/editSavoyarde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_savoyarde" />

            <RadioButton
                android:id="@+id/editTautliner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_tautliner" />

            <RadioButton
                android:id="@+id/editFourgon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_fourgon" />

            <RadioButton
                android:id="@+id/editPlateau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_plateau" />

            <RadioButton
                android:id="@+id/editCiterne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_citerne" />

            <RadioButton
                android:id="@+id/editFrigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_frigo" />

            <RadioButton
                android:id="@+id/editBenne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8_benne" />

        </RadioGroup>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editAnnule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/annuler" />

        <Button
            android:id="@+id/editConfirme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmer" />
    </LinearLayout>
</LinearLayout>